# LPBF-Serialization

./: .gitignore  README.md  alembic.ini  pyproject.toml
docs/: buildfile-format-findings.md  quantam-automation-findings.md  quantam-scripting-api-findings.md
packaging/: README.md  installer.iss  lpbf-serializer.spec
scripts/: dev_demo.py  probe_quantam_api.py  recon_quantam.py  scan_utf16_strings.py
src/lpbf_serializer/: __init__.py  __main__.py  config.py  register.py
src/lpbf_serializer/audit/: __init__.py  log.py  plate_token.py  report.py
src/lpbf_serializer/buildfile/: __init__.py  inspect.py  inspector.py  mtt_reader.py
src/lpbf_serializer/db/: __init__.py  engine.py  repositories.py  schema.py
src/lpbf_serializer/db/migrations/: env.py
src/lpbf_serializer/db/migrations/versions/: 0001_initial.py  0002_sidecar_buildfile.py
src/lpbf_serializer/domain/: __init__.py  ids.py  models.py
src/lpbf_serializer/engine/: __init__.py  placement.py  sequencer.py  serializer.py  service.py
src/lpbf_serializer/geometry/: __init__.py  engraving.py  stl.py
src/lpbf_serializer/quantam/: __init__.py  capture_ids.py  client.py  discovery.py  errors.py  manifest.py  uia_client.py
src/lpbf_serializer/ui/: __init__.py  app.py  history_panel.py  main_window.py  plate_scene.py  viewer3d.py
tests/: conftest.py
tests/integration/: test_build_service.py  test_register_build_file.py  test_report.py
tests/unit/: test_buildfile_inspector.py  test_engraving.py  test_ids.py  test_mtt_reader.py  test_placement.py  test_plate_scene.py  test_quantam_discovery.py  test_quantam_manifest.py  test_repositories.py  test_sequencer.py  test_serializer.py  test_stl.py
