[project]
name = "lpbf-serializer"
version = "0.1.0"
description = "LPBF part serialization and build sequencing for Renishaw AM400/400Q"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "LPBF Serializer Team" }]

dependencies = [
    "PySide6>=6.7,<7.0",
    "SQLAlchemy>=2.0.30,<3.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "trimesh>=4.4,<5.0",
    "numpy>=1.26,<3.0",
    "shapely>=2.0,<3.0",
    "manifold3d>=2.5,<4.0",
    "rtree>=1.2,<2.0",
    "pyvista>=0.43,<1.0",
    "pyvistaqt>=0.11,<1.0",
    "reportlab>=4.2,<5.0",
    "pywinauto>=0.6.8,<1.0 ; platform_system == 'Windows'",
    "comtypes>=1.3,<2.0 ; platform_system == 'Windows'",
    "psutil>=5.9,<8.0",
    "qrcode[pil]>=7.4,<9.0",
]

[project.scripts]
lpbf-serializer = "lpbf_serializer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lpbf_serializer"]

[dependency-groups]
dev = [
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-qt>=4.4,<5.0",
    "pytest-cov>=5.0,<7.0",
    "hypothesis>=6.100,<7.0",
    "types-reportlab>=4.2,<5.0",
    "types-psutil>=5.9,<8.0",
    "types-pywin32>=311,<400",
    "pyinstaller>=6.19.0",
    "pefile>=2024.8.26",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "RUF",
    "TRY",
    "BLE",
    "S",
]
ignore = [
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "TRY003",
    "TRY301",
    "S101",
    "UP042",
    "N802",
    "PLC0415",
    "BLE001",
    "SIM102",
    "SIM105",
    "S110",
    "N818",
    "PLR0124",
    "RUF100",
    "RUF043",
    "F541",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ARG"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "trimesh.*",
    "pyvista.*",
    "pyvistaqt.*",
    "pywinauto.*",
    "comtypes.*",
    "reportlab.*",
    "manifold3d.*",
    "shapely.*",
    "rtree.*",
    "qrcode.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: requires a live Renishaw QuantAM install",
    "gui: requires a display / Qt platform",
]

[tool.coverage.run]
source = ["src/lpbf_serializer"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
